--- a/src/dummy.css
+++ b/src/dummy.css
@@ -1,4 +1,4 @@
-/* :root {
+:root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -21,7 +21,7 @@ body {
   justify-content: space-between;
   align-items: center;
   padding: 10px;
-  border: 1px solid #ddd;
+  border: 1px solid #095ff5;
   border-radius: 5px;
   margin-bottom: 10px;
 }
@@ -100,11 +100,11 @@ button {
 }
 
 .currency-item .amount.income {
-  color: #76ff76;
+  color: #01ac01;
 }
 
 .currency-item .amount.expense {
-  color: #ff9494;
+  color: #f49999;
 }
 
 .error {
@@ -141,4 +141,4 @@ button {
 .expense-item:hover .delete-button-overlay {
   opacity: 1;
   transform: translateX(0);
-} */
+}
